fixed icons sticking out of bottom of items

--- a/css/main.css
+++ b/css/main.css
@@ -62,18 +62,18 @@ h1 {
 }
 .container {
     width: 100%;
-    height: 200px;
+    height: 12.5em;
     margin: auto;
     padding: 10px;
 }
 .container-left {
     width: 70%;
-    height: 200px;
+    height: 12.5em;
     float: left;
 }
 .container-right {
     margin-left: 70%;
-    height: 200px;
+    height: 12.5em;
 }
 .blue {
     color: white;
@@ -133,26 +133,25 @@ h1 {
 }
 .item {
     width: 100%;
-    height: 80%;
+    height: 100%;
     margin: auto;
 }
 .item-left {
     width: 70%;
-    height: 80%;
+    height: 4em;
     float: left;
 }
 .item-right {
     margin-left: 70%;
-    height: 80px;
+    height: 4em;
 }
 .skills {
     width: 100%;
-    height: 20%;
+    height: 2em;
     margin: auto;
 }
 .skills-left {
     width: 70%;
-    height: 20%;
     float: left;
 }
 .skills-left img {
@@ -161,7 +160,7 @@ h1 {
 }
 .skills-right {
     margin-left: 70%;
-    height: 20%;
+    height: 100%;
 }
 .year-title {
     color: black;
